public/assignment/CSS/style.css
input {
    margin-bottom: 5px;
}

.btn-primary {
    background-color: cornflowerblue;
}

.btn {
    border-radius: 18px;
}

body {
    padding-top: 60px;
    padding-bottom: 60px;
    margin-right: 15px;
    margin-left: 15px;
}

p.navbar-text.pull-right {
    margin-right: 15px;
}

p.navbar-text.pull-left {
    margin-left: 15px;
}

